# modman

./: .gitignore  .prettierignore  Cargo.toml  justfile  package.json  pnpm-lock.yaml  readme.md  svelte.config.js  tailwind.config.cjs
src/: app.postcss  app.rs  download.rs  enums.rs  lib.rs  macros.rs  main.rs  prelude.rs  stores.ts  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  profile.rs
src-tauri/src/structs/: mod.rs  profile.rs
src/commands/: init.rs  mod.rs
src/commands/add/: mod.rs  modrinth.rs
src/commands/config/: list.rs  mod.rs  set.rs
src/commands/export/: mod.rs  prism.rs
src/commands/modrinth/: add.rs  export.rs  mod.rs
src/commands/profile/: create.rs  delete.rs  mod.rs  select.rs  view.rs
src/commands/profile/backup/: destination.rs  mod.rs  save.rs
src/commands/sync/: destination.rs  init.rs  mod.rs  save.rs
src/components/: Loading.svelte  Meta.svelte  Profile.svelte
src/files/: config.rs  index.rs  mod.rs
src/lib/: loader.ts
src/routes/: +layout.svelte  +page.svelte  Profile.svelte
src/routes/create/: +page.svelte  Dropdown.svelte  Loader.svelte  SelectLoader.svelte  TextInput.svelte
src/routes/view/[slug]/: +page.svelte  +page.ts
src/sources/: curseforge.rs  mod.rs  modrinth.rs
src/structs/: config.rs  loader.rs  mcmod.rs  mod.rs  modrinth.rs  profile.rs
src/tui/: helpers.rs  mod.rs
src/tui/views/profile/: select.rs  view.rs
src/views/: mod.rs
src/views/profile/: mod.rs  select.rs  view.rs
src/views/profile/create/: initial.rs  mod.rs
