[package]
name = "modman"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.4"
chrono = "0.4.26"
clap = { version = "4.2.1", features = ["derive"] }
ferinth = "2.8.0"
fuzzy-matcher = "0.3.7"
git2 = "0.16.1"
git2_credentials = "0.11.0"
home = "0.5.4"
human-panic = "1.1.4"
inquire = "0.6.1"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
quickxml_to_serde = "0.5.0"
rayon = "1.7.0"
reqwest = { version = "0.11.16", features = ["stream", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
url = "2.3.1"
zip = "0.6.6"
