[package]
name = "modman"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.26.1"
home = "0.5.4"
once_cell = "1.18.0"
ratatui = "0.21.0"
reqwest = { version = "0.11.16", features = ["stream", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.3"
