[package]
name = "modman"
version = "0.1.0"
edition = "2021"

[dependencies]
backtrace = "0.3.68"
color-eyre = "0.6.2"
crossterm = "0.26.1"
home = "0.5.4"
once_cell = "1.18.0"
ratatui = "0.21.0"
semver = "1.0.18"
serde = { version = "1.0.164", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.3"
tui-textarea = { git = "https://github.com/newtykins/tui-textarea", default-features = false, features = ["ratatui-crossterm"] }
