[package]
name = "modman"
version = "0.1.0"
description = "Create Minecraft modpacks with ease"
authors = ["newtykins"]
license-file = "license.md"
repository = "https://github.com/newtykins/modman"
edition = "2021"
rust-version = "1.60"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "window-close", "window-show", "window-minimize", "window-hide", "window-unmaximize", "window-maximize", "window-unminimize", "window-start-dragging"] }
window-shadows = "0.2.1"
tokio = { version = "1.31.0", features = ["full"] }
once_cell = "1.18.0"
home = "0.5.5"
toml = "0.7.6"
paste = "1.0.14"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["typescript"] }

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
